--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = d1_mini
+lib_dir = lib
+src_dir = src
+
+[common_env_data]
+lib_deps = 
+	bblanchon/ArduinoJson@^7.0.3
+	tzapu/WiFiManager@^0.16.0
+
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	${common_env_data.lib_deps}
+	khoih-prog/ESP_DoubleResetDetector@^1.3.2
